# gnomon

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  environment.yml  gnomon.code-workspace  pyproject.toml
.github/ISSUE_TEMPLATE/: general.yml
conda.recipe/: meta.yaml
config/dictionaries/: project.txt
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/design/methods/: _index.md  formal-contracts.md  migration-reasoning-graph.md  note-types.md  plan-agents-humain-generation.md  plan-revisions.md  procedural-workflows.md  registries.md  workspace-architecture.md
docs/design/quality-criteria/: principles-reasoning-argumentation-G.md  principles-reasoning-argumentation-by-field.md  principles-reasoning-comparison.md
docs/governance/: post-draft-audits.md
docs/guide/: cli-reference.md  installation.md  usage.md
docs/internals/quality-criteria/: _index.md  decision-rules.md  principles-reasoning-argumentation-C.md  principles-reasoning-final.md
src/gnomon/: __init__.py  __main__.py  cli.py
src/gnomon/data/contracts/: _index.md
src/gnomon/data/registries/: _index.md
src/gnomon/data/schemas/: _index.md
src/gnomon/data/specs/: _index.md  note-template.md
src/gnomon/data/workflow/: _index.md  audit-protocol.md
tests/: conftest.py
